@@ -385,6 +385,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Add /usr/local/bin to the diff3 search paths in the installer
 * (bug 6106) Update to Indonesian localisation (id) #17
 * (bug 6125) Add links to edit old versions to diff views
+* (bug 5127) Auto edit summary when creating redirect page
 
 == Compatibility ==
 
